@@ -20,6 +20,7 @@ Issue #171 Bug          - Update clamav -- fix any clamav discrepancies
 Issue #172 Enhancement  - Review sanesecurity signatures for inclusion in EFA
 Issue #173 Enhancement  - Securiteinfo.com support removed from unofficial-sigs
 Issue #175 Enhancement  - Set keyboard layout at beginning of EFA-Init
+Issue #177 Enhancement  - Correct EFA to new clamav paths using EPEL
 Issue #178 Enhancement  - EFA MailWatch Unicode Support
 
 EPEL Repository is now enabled
